parsers/tptp/hotptp-1.output
Terminals unused in grammar

   unrecognized


Grammar

    0 $accept: TPTP_file $end

    1 TPTP_file: null
    2          | TPTP_file TPTP_input

    3 TPTP_input: annotated_formula
    4           | include

    5 annotated_formula: fof_annotated
    6                  | cnf_annotated
    7                  | thf_annotated
    8                  | tff_annotated

    9 fof_annotated: _LIT_fof LPAREN name COMMA formula_role COMMA fof_formula annotations RPAREN PERIOD

   10 cnf_annotated: _LIT_cnf LPAREN name COMMA formula_role COMMA cnf_formula annotations RPAREN PERIOD

   11 thf_annotated: _LIT_thf LPAREN name COMMA formula_role COMMA thf_formula annotations RPAREN PERIOD

   12 tff_annotated: _LIT_tff LPAREN name COMMA formula_role COMMA tff_formula annotations RPAREN PERIOD

   13 annotations: null
   14            | COMMA source optional_info

   15 formula_role: lower_word

   16 fof_formula: binary_formula
   17            | unitary_formula

   18 binary_formula: nonassoc_binary
   19               | assoc_binary

   20 nonassoc_binary: unitary_formula binary_connective unitary_formula

   21 binary_connective: LESS_EQUALS_GREATER
   22                  | EQUALS_GREATER
   23                  | LESS_EQUALS
   24                  | LESS_TILDE_GREATER
   25                  | TILDE_VLINE
   26                  | TILDE_AMPERSAND

   27 assoc_binary: or_formula
   28             | and_formula

   29 or_formula: unitary_formula VLINE unitary_formula
   30           | unitary_formula VLINE or_formula

   31 and_formula: unitary_formula AMPERSAND unitary_formula
   32            | unitary_formula AMPERSAND and_formula

   33 assoc_connective: VLINE
   34                 | AMPERSAND

   35 unitary_formula: quantified_formula
   36                | unary_formula
   37                | atomic_formula
   38                | LPAREN fof_formula RPAREN

   39 quantified_formula: quantifier LBRKT variable_list RBRKT COLON unitary_formula

   40 quantifier: EXCLAMATION
   41           | QUESTION

   42 variable_list: variable
   43              | variable COMMA variable_list

   44 unary_formula: unary_connective unitary_formula

   45 unary_connective: TILDE

   46 cnf_formula: LPAREN disjunction RPAREN
   47            | disjunction

   48 disjunction: literal
   49            | literal VLINE disjunction

   50 literal: atomic_formula
   51        | TILDE atomic_formula

   52 thf_formula: thf_binary_formula
   53            | thf_unitary_formula
   54            | thf_definition

   55 thf_binary_formula: thf_nonassoc_formula
   56                   | thf_assoc_formula
   57                   | thf_apply_formula
   58                   | thf_equality
   59                   | thf_binary_type

   60 thf_nonassoc_formula: thf_unitary_formula binary_connective thf_unitary_formula

   61 thf_equality: thf_unitary_formula EQUALS thf_unitary_formula

   62 thf_assoc_formula: thf_or_formula
   63                  | thf_and_formula

   64 thf_or_formula: thf_unitary_formula VLINE thf_unitary_formula
   65               | thf_or_formula VLINE thf_unitary_formula

   66 thf_and_formula: thf_unitary_formula AMPERSAND thf_unitary_formula
   67                | thf_and_formula AMPERSAND thf_unitary_formula

   68 thf_unitary_formula: thf_atom
   69                    | thf_let_rec
   70                    | thf_abstraction
   71                    | thf_unary_formula
   72                    | thf_quantified_formula
   73                    | LPAREN thf_tuple RPAREN
   74                    | LPAREN thf_binary_formula RPAREN
   75                    | LPAREN thf_unitary_formula RPAREN

   76 thf_quantified_formula: thf_quantifier LBRKT thf_variable_list RBRKT COLON thf_unitary_formula

   77 thf_quantifier: EXCLAMATION
   78               | QUESTION

   79 thf_variable_list: thf_variable
   80                  | thf_variable COMMA thf_variable_list

   81 thf_unary_formula: unary_connective thf_unitary_formula

   82 thf_abstraction: thf_lambda LBRKT thf_variable_list RBRKT COLON thf_unitary_formula

   83 thf_lambda: _LIT_lambda
   84           | CARET

   85 thf_apply_formula: thf_apply_formula AT_SIGN thf_unitary_formula
   86                  | thf_unitary_formula AT_SIGN thf_unitary_formula

   87 thf_tuple: thf_unitary_formula COMMA thf_tuple
   88          | thf_unitary_formula COMMA thf_unitary_formula

   89 thf_atom: thf_typed_atom
   90         | thf_untyped_atom

   91 thf_typed_atom: thf_typed_constant
   92               | thf_typed_variable

   93 thf_untyped_atom: thf_untyped_constant
   94                 | thf_untyped_variable

   95 thf_variable: thf_untyped_variable
   96             | thf_typed_variable

   97 thf_typed_variable: thf_untyped_variable COLON thf_unitary_type

   98 thf_untyped_variable: variable

   99 thf_typed_constant: thf_untyped_constant COLON thf_unitary_type

  100 thf_untyped_constant: atomic_word
  101                     | number
  102                     | distinct_object
  103                     | atomic_system_word
  104                     | thf_defined_word
  105                     | LPAREN tptp_operator RPAREN

  106 thf_defined_word: defined_type
  107                 | defined_prop

  108 tptp_operator: unary_connective
  109              | binary_connective
  110              | assoc_connective
  111              | quantifier
  112              | EQUALS

  113 thf_binary_type: thf_mapping_type
  114                | thf_xprod_type
  115                | thf_union_type

  116 thf_mapping_type: thf_unitary_type map_arrow thf_mapping_type
  117                 | thf_unitary_type map_arrow thf_unitary_type

  118 thf_xprod_type: thf_xprod_type STAR thf_unitary_type
  119               | thf_unitary_type STAR thf_unitary_type

  120 thf_union_type: thf_union_type plus thf_unitary_type
  121               | thf_unitary_type plus thf_unitary_type

  122 thf_unitary_type: thf_unitary_formula

  123 map_arrow: MINUS_GREATER
  124          | GREATER

  125 thf_let_rec: _LIT_letrec LBRKT thf_definition_list RBRKT COLON thf_unitary_formula

  126 thf_definition_list: thf_definition
  127                    | thf_definition COMMA thf_definition_list

  128 thf_definition: atomic_word COLON_EQUALS thf_unitary_formula
  129               | LPAREN thf_definition RPAREN

  130 tff_formula: tff_binary_formula
  131            | tff_unitary_formula
  132            | tff_typed_atom

  133 tff_binary_formula: tff_nonassoc_binary
  134                   | tff_assoc_binary

  135 tff_nonassoc_binary: tff_unitary_formula binary_connective tff_unitary_formula

  136 tff_assoc_binary: tff_or_formula
  137                 | tff_and_formula

  138 tff_or_formula: tff_unitary_formula VLINE tff_unitary_formula
  139               | tff_unitary_formula VLINE tff_or_formula

  140 tff_and_formula: tff_unitary_formula AMPERSAND tff_unitary_formula
  141                | tff_unitary_formula AMPERSAND tff_and_formula

  142 tff_unitary_formula: tff_quantified_formula
  143                    | tff_unary_formula
  144                    | atomic_formula
  145                    | LPAREN tff_binary_formula RPAREN
  146                    | LPAREN tff_unitary_formula RPAREN

  147 tff_quantified_formula: quantifier LBRKT tff_variable_list RBRKT COLON tff_unitary_formula

  148 tff_variable_list: tff_variable
  149                  | tff_variable COMMA tff_variable_list

  150 tff_unary_formula: unary_connective tff_unitary_formula

  151 tff_typed_atom: tff_untyped_atom COLON tff_type_spec
  152               | LPAREN tff_typed_atom RPAREN

  153 tff_untyped_atom: functor
  154                 | defined_term
  155                 | system_functor

  156 tff_variable: tff_untyped_variable
  157             | tff_typed_variable

  158 tff_typed_variable: tff_untyped_variable COLON tff_type_spec

  159 tff_untyped_variable: variable

  160 tff_type_spec: tff_untyped_atom
  161              | defined_type
  162              | tff_type_expr
  163              | LPAREN tff_type_spec RPAREN

  164 tff_type_expr: LPAREN tff_binary_type RPAREN

  165 tff_binary_type: tff_mapping_type
  166                | tff_xprod_type
  167                | tff_union_type

  168 tff_mapping_type: tff_unitary_type map_arrow tff_mapping_type
  169                 | tff_unitary_type map_arrow tff_unitary_type

  170 tff_xprod_type: tff_xprod_type STAR tff_unitary_type
  171               | tff_unitary_type STAR tff_unitary_type

  172 tff_union_type: tff_union_type plus tff_unitary_type
  173               | tff_unitary_type plus tff_unitary_type

  174 tff_unitary_type: tff_untyped_atom
  175                 | defined_type
  176                 | tff_type_expr

  177 atomic_formula: plain_atom
  178               | defined_atom
  179               | system_atom

  180 plain_atom: plain_term

  181 arguments: term
  182          | term COMMA arguments

  183 defined_atom: defined_prop
  184             | defined_pred LPAREN arguments RPAREN
  185             | term defined_infix_pred term

  186 defined_infix_pred: EQUALS
  187                   | EXCLAMATION_EQUALS

  188 defined_prop: trueProp
  189             | falseProp

  190 defined_pred: atomic_defined_word

  191 defined_type: oType
  192             | iType
  193             | tType

  194 system_atom: system_term

  195 term: function_term
  196     | variable

  197 function_term: plain_term
  198              | defined_term
  199              | system_term

  200 plain_term: constant
  201           | functor LPAREN arguments RPAREN

  202 constant: atomic_word

  203 functor: atomic_word

  204 defined_term: number
  205             | distinct_object

  206 system_term: system_constant
  207            | system_functor LPAREN arguments RPAREN

  208 system_functor: atomic_system_word

  209 system_constant: atomic_system_word

  210 variable: upper_word

  211 source: general_term

  212 optional_info: COMMA useful_info
  213              | null

  214 useful_info: general_term_list

  215 include: _LIT_include LPAREN file_name formula_selection RPAREN PERIOD

  216 formula_selection: COMMA LBRKT name_list RBRKT
  217                  | null

  218 name_list: name
  219          | name COMMA name_list

  220 general_term: general_data
  221             | general_data COLON general_term
  222             | general_list

  223 general_data: atomic_word
  224             | atomic_word LPAREN general_arguments RPAREN
  225             | number
  226             | distinct_object

  227 general_arguments: general_term
  228                  | general_term COMMA general_arguments

  229 general_list: LBRKT RBRKT
  230             | LBRKT general_term_list RBRKT

  231 general_term_list: general_term
  232                  | general_term COMMA general_term_list

  233 name: atomic_word
  234     | unsigned_integer

  235 atomic_word: lower_word
  236            | single_quoted

  237 atomic_defined_word: dollar_word

  238 atomic_system_word: dollar_dollar_word

  239 number: real
  240       | signed_integer
  241       | unsigned_integer

  242 file_name: atomic_word

  243 null: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
AMPERSAND (258) 31 32 34 66 67 140 141
AT_SIGN (259) 85 86
CARET (260) 84
COLON (261) 39 76 82 97 99 125 147 151 158 221
COLON_EQUALS (262) 128
COMMA (263) 9 10 11 12 14 43 80 87 88 127 149 182 212 216 219 228 232
EQUALS (264) 61 112 186
EQUALS_GREATER (265) 22
EXCLAMATION (266) 40 77
EXCLAMATION_EQUALS (267) 187
GREATER (268) 124
LBRKT (269) 39 76 82 125 147 216 229 230
LESS_EQUALS (270) 23
LESS_EQUALS_GREATER (271) 21
LESS_TILDE_GREATER (272) 24
LPAREN (273) 9 10 11 12 38 46 73 74 75 105 129 145 146 152 163 164
    184 201 207 215 224
MINUS_GREATER (274) 123
PERIOD (275) 9 10 11 12 215
QUESTION (276) 41 78
RBRKT (277) 39 76 82 125 147 216 229 230
RPAREN (278) 9 10 11 12 38 46 73 74 75 105 129 145 146 152 163 164
    184 201 207 215 224
STAR (279) 118 119 170 171
TILDE (280) 45 51
TILDE_AMPERSAND (281) 26
TILDE_VLINE (282) 25
VLINE (283) 29 30 33 49 64 65 138 139
_LIT_cnf (284) 10
_LIT_fof (285) 9
_LIT_include (286) 215
_LIT_lambda (287) 83
_LIT_letrec (288) 125
_LIT_tff (289) 12
_LIT_thf (290) 11
distinct_object (291) 102 205 226
dollar_dollar_word (292) 238
dollar_word (293) 237
falseProp (294) 189
iType (295) 192
lower_word (296) 15 235
oType (297) 191
plus (298) 120 121 172 173
real (299) 239
signed_integer (300) 240
single_quoted (301) 236
tType (302) 193
trueProp (303) 188
unrecognized (304)
unsigned_integer (305) 234 241
upper_word (306) 210


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
TPTP_file (53)
    on left: 1 2, on right: 0 2
TPTP_input (54)
    on left: 3 4, on right: 2
annotated_formula (55)
    on left: 5 6 7 8, on right: 3
fof_annotated (56)
    on left: 9, on right: 5
cnf_annotated (57)
    on left: 10, on right: 6
thf_annotated (58)
    on left: 11, on right: 7
tff_annotated (59)
    on left: 12, on right: 8
annotations (60)
    on left: 13 14, on right: 9 10 11 12
formula_role (61)
    on left: 15, on right: 9 10 11 12
fof_formula (62)
    on left: 16 17, on right: 9 38
binary_formula (63)
    on left: 18 19, on right: 16
nonassoc_binary (64)
    on left: 20, on right: 18
binary_connective (65)
    on left: 21 22 23 24 25 26, on right: 20 60 109 135
assoc_binary (66)
    on left: 27 28, on right: 19
or_formula (67)
    on left: 29 30, on right: 27 30
and_formula (68)
    on left: 31 32, on right: 28 32
assoc_connective (69)
    on left: 33 34, on right: 110
unitary_formula (70)
    on left: 35 36 37 38, on right: 17 20 29 30 31 32 39 44
quantified_formula (71)
    on left: 39, on right: 35
quantifier (72)
    on left: 40 41, on right: 39 111 147
variable_list (73)
    on left: 42 43, on right: 39 43
unary_formula (74)
    on left: 44, on right: 36
unary_connective (75)
    on left: 45, on right: 44 81 108 150
cnf_formula (76)
    on left: 46 47, on right: 10
disjunction (77)
    on left: 48 49, on right: 46 47 49
literal (78)
    on left: 50 51, on right: 48 49
thf_formula (79)
    on left: 52 53 54, on right: 11
thf_binary_formula (80)
    on left: 55 56 57 58 59, on right: 52 74
thf_nonassoc_formula (81)
    on left: 60, on right: 55
thf_equality (82)
    on left: 61, on right: 58
thf_assoc_formula (83)
    on left: 62 63, on right: 56
thf_or_formula (84)
    on left: 64 65, on right: 62 65
thf_and_formula (85)
    on left: 66 67, on right: 63 67
thf_unitary_formula (86)
    on left: 68 69 70 71 72 73 74 75, on right: 53 60 61 64 65 66 67
    75 76 81 82 85 86 87 88 122 125 128
thf_quantified_formula (87)
    on left: 76, on right: 72
thf_quantifier (88)
    on left: 77 78, on right: 76
thf_variable_list (89)
    on left: 79 80, on right: 76 80 82
thf_unary_formula (90)
    on left: 81, on right: 71
thf_abstraction (91)
    on left: 82, on right: 70
thf_lambda (92)
    on left: 83 84, on right: 82
thf_apply_formula (93)
    on left: 85 86, on right: 57 85
thf_tuple (94)
    on left: 87 88, on right: 73 87
thf_atom (95)
    on left: 89 90, on right: 68
thf_typed_atom (96)
    on left: 91 92, on right: 89
thf_untyped_atom (97)
    on left: 93 94, on right: 90
thf_variable (98)
    on left: 95 96, on right: 79 80
thf_typed_variable (99)
    on left: 97, on right: 92 96
thf_untyped_variable (100)
    on left: 98, on right: 94 95 97
thf_typed_constant (101)
    on left: 99, on right: 91
thf_untyped_constant (102)
    on left: 100 101 102 103 104 105, on right: 93 99
thf_defined_word (103)
    on left: 106 107, on right: 104
tptp_operator (104)
    on left: 108 109 110 111 112, on right: 105
thf_binary_type (105)
    on left: 113 114 115, on right: 59
thf_mapping_type (106)
    on left: 116 117, on right: 113 116
thf_xprod_type (107)
    on left: 118 119, on right: 114 118
thf_union_type (108)
    on left: 120 121, on right: 115 120
thf_unitary_type (109)
    on left: 122, on right: 97 99 116 117 118 119 120 121
map_arrow (110)
    on left: 123 124, on right: 116 117 168 169
thf_let_rec (111)
    on left: 125, on right: 69
thf_definition_list (112)
    on left: 126 127, on right: 125 127
thf_definition (113)
    on left: 128 129, on right: 54 126 127 129
tff_formula (114)
    on left: 130 131 132, on right: 12
tff_binary_formula (115)
    on left: 133 134, on right: 130 145
tff_nonassoc_binary (116)
    on left: 135, on right: 133
tff_assoc_binary (117)
    on left: 136 137, on right: 134
tff_or_formula (118)
    on left: 138 139, on right: 136 139
tff_and_formula (119)
    on left: 140 141, on right: 137 141
tff_unitary_formula (120)
    on left: 142 143 144 145 146, on right: 131 135 138 139 140 141
    146 147 150
tff_quantified_formula (121)
    on left: 147, on right: 142
tff_variable_list (122)
    on left: 148 149, on right: 147 149
tff_unary_formula (123)
    on left: 150, on right: 143
tff_typed_atom (124)
    on left: 151 152, on right: 132 152
tff_untyped_atom (125)
    on left: 153 154 155, on right: 151 160 174
tff_variable (126)
    on left: 156 157, on right: 148 149
tff_typed_variable (127)
    on left: 158, on right: 157
tff_untyped_variable (128)
    on left: 159, on right: 156 158
tff_type_spec (129)
    on left: 160 161 162 163, on right: 151 158 163
tff_type_expr (130)
    on left: 164, on right: 162 176
tff_binary_type (131)
    on left: 165 166 167, on right: 164
tff_mapping_type (132)
    on left: 168 169, on right: 165 168
tff_xprod_type (133)
    on left: 170 171, on right: 166 170
tff_union_type (134)
    on left: 172 173, on right: 167 172
tff_unitary_type (135)
    on left: 174 175 176, on right: 168 169 170 171 172 173
atomic_formula (136)
    on left: 177 178 179, on right: 37 50 51 144
plain_atom (137)
    on left: 180, on right: 177
arguments (138)
    on left: 181 182, on right: 182 184 201 207
defined_atom (139)
    on left: 183 184 185, on right: 178
defined_infix_pred (140)
    on left: 186 187, on right: 185
defined_prop (141)
    on left: 188 189, on right: 107 183
defined_pred (142)
    on left: 190, on right: 184
defined_type (143)
    on left: 191 192 193, on right: 106 161 175
system_atom (144)
    on left: 194, on right: 179
term (145)
    on left: 195 196, on right: 181 182 185
function_term (146)
    on left: 197 198 199, on right: 195
plain_term (147)
    on left: 200 201, on right: 180 197
constant (148)
    on left: 202, on right: 200
functor (149)
    on left: 203, on right: 153 201
defined_term (150)
    on left: 204 205, on right: 154 198
system_term (151)
    on left: 206 207, on right: 194 199
system_functor (152)
    on left: 208, on right: 155 207
system_constant (153)
    on left: 209, on right: 206
variable (154)
    on left: 210, on right: 42 43 98 159 196
source (155)
    on left: 211, on right: 14
optional_info (156)
    on left: 212 213, on right: 14
useful_info (157)
    on left: 214, on right: 212
include (158)
    on left: 215, on right: 4
formula_selection (159)
    on left: 216 217, on right: 215
name_list (160)
    on left: 218 219, on right: 216 219
general_term (161)
    on left: 220 221 222, on right: 211 221 227 228 231 232
general_data (162)
    on left: 223 224 225 226, on right: 220 221
general_arguments (163)
    on left: 227 228, on right: 224 228
general_list (164)
    on left: 229 230, on right: 222
general_term_list (165)
    on left: 231 232, on right: 214 230 232
name (166)
    on left: 233 234, on right: 9 10 11 12 218 219
atomic_word (167)
    on left: 235 236, on right: 100 128 202 203 223 224 233 242
atomic_defined_word (168)
    on left: 237, on right: 190
atomic_system_word (169)
    on left: 238, on right: 103 208 209
number (170)
    on left: 239 240 241, on right: 101 204 225
file_name (171)
    on left: 242, on right: 215
null (172)
    on left: 243, on right: 1 13 213 217


state 0

    0 $accept: . TPTP_file $end

    $default  reduce using rule 243 (null)

    TPTP_file  go to state 1
    null       go to state 2


state 1

    0 $accept: TPTP_file . $end
    2 TPTP_file: TPTP_file . TPTP_input

    $end          shift, and go to state 3
    _LIT_cnf      shift, and go to state 4
    _LIT_fof      shift, and go to state 5
    _LIT_include  shift, and go to state 6
    _LIT_tff      shift, and go to state 7
    _LIT_thf      shift, and go to state 8

    TPTP_input         go to state 9
    annotated_formula  go to state 10
    fof_annotated      go to state 11
    cnf_annotated      go to state 12
    thf_annotated      go to state 13
    tff_annotated      go to state 14
    include            go to state 15


state 2

    1 TPTP_file: null .

    $default  reduce using rule 1 (TPTP_file)


state 3

    0 $accept: TPTP_file $end .

    $default  accept


state 4

   10 cnf_annotated: _LIT_cnf . LPAREN name COMMA formula_role COMMA cnf_formula annotations RPAREN PERIOD

    LPAREN  shift, and go to state 16


state 5

    9 fof_annotated: _LIT_fof . LPAREN name COMMA formula_role COMMA fof_formula annotations RPAREN PERIOD

    LPAREN  shift, and go to state 17


state 6

  215 include: _LIT_include . LPAREN file_name formula_selection RPAREN PERIOD

    LPAREN  shift, and go to state 18


state 7

   12 tff_annotated: _LIT_tff . LPAREN name COMMA formula_role COMMA tff_formula annotations RPAREN PERIOD

    LPAREN  shift, and go to state 19


state 8

   11 thf_annotated: _LIT_thf . LPAREN name COMMA formula_role COMMA thf_formula annotations RPAREN PERIOD

    LPAREN  shift, and go to state 20


state 9

    2 TPTP_file: TPTP_file TPTP_input .

    $default  reduce using rule 2 (TPTP_file)


state 10

    3 TPTP_input: annotated_formula .

    $default  reduce using rule 3 (TPTP_input)


state 11

    5 annotated_formula: fof_annotated .

    $default  reduce using rule 5 (annotated_formula)


state 12

    6 annotated_formula: cnf_annotated .

    $default  reduce using rule 6 (annotated_formula)


state 13

    7 annotated_formula: thf_annotated .

    $default  reduce using rule 7 (annotated_formula)


state 14

    8 annotated_formula: tff_annotated .

    $default  reduce using rule 8 (annotated_formula)


state 15

    4 TPTP_input: include .

    $default  reduce using rule 4 (TPTP_input)


state 16

   10 cnf_annotated: _LIT_cnf LPAREN . name COMMA formula_role COMMA cnf_formula annotations RPAREN PERIOD

    lower_word        shift, and go to state 21
    single_quoted     shift, and go to state 22
    unsigned_integer  shift, and go to state 23

    name         go to state 24
    atomic_word  go to state 25


state 17

    9 fof_annotated: _LIT_fof LPAREN . name COMMA formula_role COMMA fof_formula annotations RPAREN PERIOD

    lower_word        shift, and go to state 21
    single_quoted     shift, and go to state 22
    unsigned_integer  shift, and go to state 23

    name         go to state 26
    atomic_word  go to state 25


state 18

  215 include: _LIT_include LPAREN . file_name formula_selection RPAREN PERIOD

    lower_word     shift, and go to state 21
    single_quoted  shift, and go to state 22

    atomic_word  go to state 27
    file_name    go to state 28


state 19

   12 tff_annotated: _LIT_tff LPAREN . name COMMA formula_role COMMA tff_formula annotations RPAREN PERIOD

    lower_word        shift, and go to state 21
    single_quoted     shift, and go to state 22
    unsigned_integer  shift, and go to state 23

    name         go to state 29
    atomic_word  go to state 25


state 20

   11 thf_annotated: _LIT_thf LPAREN . name COMMA formula_role COMMA thf_formula annotations RPAREN PERIOD

    lower_word        shift, and go to state 21
    single_quoted     shift, and go to state 22
    unsigned_integer  shift, and go to state 23

    name         go to state 30
    atomic_word  go to state 25


state 21

  235 atomic_word: lower_word .

    $default  reduce using rule 235 (atomic_word)


state 22

  236 atomic_word: single_quoted .

    $default  reduce using rule 236 (atomic_word)


state 23

  234 name: unsigned_integer .

    $default  reduce using rule 234 (name)


state 24

   10 cnf_annotated: _LIT_cnf LPAREN name . COMMA formula_role COMMA cnf_formula annotations RPAREN PERIOD

    COMMA  shift, and go to state 31


state 25

  233 name: atomic_word .

    $default  reduce using rule 233 (name)


state 26

    9 fof_annotated: _LIT_fof LPAREN name . COMMA formula_role COMMA fof_formula annotations RPAREN PERIOD

    COMMA  shift, and go to state 32


state 27

  242 file_name: atomic_word .

    $default  reduce using rule 242 (file_name)


state 28

  215 include: _LIT_include LPAREN file_name . formula_selection RPAREN PERIOD

    COMMA  shift, and go to state 33

    $default  reduce using rule 243 (null)

    formula_selection  go to state 34
    null               go to state 35


state 29

   12 tff_annotated: _LIT_tff LPAREN name . COMMA formula_role COMMA tff_formula annotations RPAREN PERIOD

    COMMA  shift, and go to state 36


state 30

   11 thf_annotated: _LIT_thf LPAREN name . COMMA formula_role COMMA thf_formula annotations RPAREN PERIOD

    COMMA  shift, and go to state 37


state 31

   10 cnf_annotated: _LIT_cnf LPAREN name COMMA . formula_role COMMA cnf_formula annotations RPAREN PERIOD

    lower_word  shift, and go to state 38

    formula_role  go to state 39


state 32

    9 fof_annotated: _LIT_fof LPAREN name COMMA . formula_role COMMA fof_formula annotations RPAREN PERIOD

    lower_word  shift, and go to state 38

    formula_role  go to state 40


state 33

  216 formula_selection: COMMA . LBRKT name_list RBRKT

    LBRKT  shift, and go to state 41


state 34

  215 include: _LIT_include LPAREN file_name formula_selection . RPAREN PERIOD

    RPAREN  shift, and go to state 42


state 35

  217 formula_selection: null .

    $default  reduce using rule 217 (formula_selection)


state 36

   12 tff_annotated: _LIT_tff LPAREN name COMMA . formula_role COMMA tff_formula annotations RPAREN PERIOD

    lower_word  shift, and go to state 38

    formula_role  go to state 43


state 37

   11 thf_annotated: _LIT_thf LPAREN name COMMA . formula_role COMMA thf_formula annotations RPAREN PERIOD

    lower_word  shift, and go to state 38

    formula_role  go to state 44


state 38

   15 formula_role: lower_word .

    $default  reduce using rule 15 (formula_role)


state 39

   10 cnf_annotated: _LIT_cnf LPAREN name COMMA formula_role . COMMA cnf_formula annotations RPAREN PERIOD

    COMMA  shift, and go to state 45


state 40

    9 fof_annotated: _LIT_fof LPAREN name COMMA formula_role . COMMA fof_formula annotations RPAREN PERIOD

    COMMA  shift, and go to state 46


state 41

  216 formula_selection: COMMA LBRKT . name_list RBRKT

    lower_word        shift, and go to state 21
    single_quoted     shift, and go to state 22
    unsigned_integer  shift, and go to state 23

    name_list    go to state 47
    name         go to state 48
    atomic_word  go to state 25


state 42

  215 include: _LIT_include LPAREN file_name formula_selection RPAREN . PERIOD

    PERIOD  shift, and go to state 49


state 43

   12 tff_annotated: _LIT_tff LPAREN name COMMA formula_role . COMMA tff_formula annotations RPAREN PERIOD

    COMMA  shift, and go to state 50


state 44

   11 thf_annotated: _LIT_thf LPAREN name COMMA formula_role . COMMA thf_formula annotations RPAREN PERIOD

    COMMA  shift, and go to state 51


state 45

   10 cnf_annotated: _LIT_cnf LPAREN name COMMA formula_role COMMA . cnf_formula annotations RPAREN PERIOD

    LPAREN              shift, and go to state 52
    TILDE               shift, and go to state 53
    distinct_object     shift, and go to state 54
    dollar_dollar_word  shift, and go to state 55
    dollar_word         shift, and go to state 56
    falseProp           shift, and go to state 57
    lower_word          shift, and go to state 21
    real                shift, and go to state 58
    signed_integer      shift, and go to state 59
    single_quoted       shift, and go to state 22
    trueProp            shift, and go to state 60
    unsigned_integer    shift, and go to state 61
    upper_word          shift, and go to state 62

    cnf_formula          go to state 63
    disjunction          go to state 64
    literal              go to state 65
    atomic_formula       go to state 66
    plain_atom           go to state 67
    defined_atom         go to state 68
    defined_prop         go to state 69
    defined_pred         go to state 70
    system_atom          go to state 71
    term                 go to state 72
    function_term        go to state 73
    plain_term           go to state 74
    constant             go to state 75
    functor              go to state 76
    defined_term         go to state 77
    system_term          go to state 78
    system_functor       go to state 79
    system_constant      go to state 80
    variable             go to state 81
    atomic_word          go to state 82
    atomic_defined_word  go to state 83
    atomic_system_word   go to state 84
    number               go to state 85


state 46

    9 fof_annotated: _LIT_fof LPAREN name COMMA formula_role COMMA . fof_formula annotations RPAREN PERIOD

    EXCLAMATION         shift, and go to state 86
    LPAREN              shift, and go to state 87
    QUESTION            shift, and go to state 88
    TILDE               shift, and go to state 89
    distinct_object     shift, and go to state 54
    dollar_dollar_word  shift, and go to state 55
    dollar_word         shift, and go to state 56
    falseProp           shift, and go to state 57
    lower_word          shift, and go to state 21
    real                shift, and go to state 58
    signed_integer      shift, and go to state 59
    single_quoted       shift, and go to state 22
    trueProp            shift, and go to state 60
    unsigned_integer    shift, and go to state 61
    upper_word          shift, and go to state 62

    fof_formula          go to state 90
    binary_formula       go to state 91
    nonassoc_binary      go to state 92
    assoc_binary         go to state 93
    or_formula           go to state 94
    and_formula          go to state 95
    unitary_formula      go to state 96
    quantified_formula   go to state 97
    quantifier           go to state 98
    unary_formula        go to state 99
    unary_connective     go to state 100
    atomic_formula       go to state 101
    plain_atom           go to state 67
    defined_atom         go to state 68
    defined_prop         go to state 69
    defined_pred         go to state 70
    system_atom          go to state 71
    term                 go to state 72
    function_term        go to state 73
    plain_term           go to state 74
    constant             go to state 75
    functor              go to state 76
    defined_term         go to state 77
    system_term          go to state 78
    system_functor       go to state 79
    system_constant      go to state 80
    variable             go to state 81
    atomic_word          go to state 82
    atomic_defined_word  go to state 83
    atomic_system_word   go to state 84
    number               go to state 85


state 47

  216 formula_selection: COMMA LBRKT name_list . RBRKT

    RBRKT  shift, and go to state 102


state 48

  218 name_list: name .
  219          | name . COMMA name_list

    COMMA  shift, and go to state 103

    $default  reduce using rule 218 (name_list)


state 49

  215 include: _LIT_include LPAREN file_name formula_selection RPAREN PERIOD .

    $default  reduce using rule 215 (include)


state 50

   12 tff_annotated: _LIT_tff LPAREN name COMMA formula_role COMMA . tff_formula annotations RPAREN PERIOD

    EXCLAMATION         shift, and go to state 86
    LPAREN              shift, and go to state 104
    QUESTION            shift, and go to state 88
    TILDE               shift, and go to state 89
    distinct_object     shift, and go to state 54
    dollar_dollar_word  shift, and go to state 55
    dollar_word         shift, and go to state 56
    falseProp           shift, and go to state 57
    lower_word          shift, and go to state 21
    real                shift, and go to state 58
    signed_integer      shift, and go to state 59
    single_quoted       shift, and go to state 22
    trueProp            shift, and go to state 60
    unsigned_integer    shift, and go to state 61
    upper_word          shift, and go to state 62

    quantifier              go to state 105
    unary_connective        go to state 106
    tff_formula             go to state 107
    tff_binary_formula      go to state 108
    tff_nonassoc_binary     go to state 109
    tff_assoc_binary        go to state 110
    tff_or_formula          go to state 111
    tff_and_formula         go to state 112
    tff_unitary_formula     go to state 113
    tff_quantified_formula  go to state 114
    tff_unary_formula       go to state 115
    tff_typed_atom          go to state 116
    tff_untyped_atom        go to state 117
    atomic_formula          go to state 118
    plain_atom              go to state 67
    defined_atom            go to state 68
    defined_prop            go to state 69
    defined_pred            go to state 70
    system_atom             go to state 71
    term                    go to state 72
    function_term           go to state 73
    plain_term              go to state 74
    constant                go to state 75
    functor                 go to state 119
    defined_term            go to state 120
    system_term             go to state 78
    system_functor          go to state 121
    system_constant         go to state 80
    variable                go to state 81
    atomic_word             go to state 82
    atomic_defined_word     go to state 83
    atomic_system_word      go to state 84
    number                  go to state 85


state 51

   11 thf_annotated: _LIT_thf LPAREN name COMMA formula_role COMMA . thf_formula annotations RPAREN PERIOD

    CARET               shift, and go to state 122
    EXCLAMATION         shift, and go to state 123
    LPAREN              shift, and go to state 124
    QUESTION            shift, and go to state 125
    TILDE               shift, and go to state 89
    _LIT_lambda         shift, and go to state 126
    _LIT_letrec         shift, and go to state 127
    distinct_object     shift, and go to state 128
    dollar_dollar_word  shift, and go to state 55
    falseProp           shift, and go to state 57
    iType               shift, and go to state 129
    lower_word          shift, and go to state 21
    oType               shift, and go to state 130
    real                shift, and go to state 58
    signed_integer      shift, and go to state 59
    single_quoted       shift, and go to state 22
    tType               shift, and go to state 131
    trueProp            shift, and go to state 60
    unsigned_integer    shift, and go to state 61
    upper_word          shift, and go to state 62
